# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id$

AUTOMAKE_OPTIONS = foreign

########################################################################
#                      unitTest for CoinUtils                          #
########################################################################

noinst_PROGRAMS = unitTest

nodist_unitTest_SOURCES = 
nodist_unitTest_SOURCES += LP/BB_lp.cpp
nodist_unitTest_SOURCES += TM/BB_tm.cpp
nodist_unitTest_SOURCES += Member/BB_user_data.cpp
nodist_unitTest_SOURCES += Member/BB_init.cpp
nodist_unitTest_SOURCES += Member/BB.cpp
nodist_unitTest_SOURCES += Member/BB_cut.cpp
nodist_unitTest_SOURCES += include/BB_user_data.hpp
nodist_unitTest_SOURCES += include/BB_lp.hpp
nodist_unitTest_SOURCES += include/BB_init.hpp
nodist_unitTest_SOURCES += include/BB_tm.hpp
nodist_unitTest_SOURCES += include/BB.hpp
nodist_unitTest_SOURCES += include/BB_cut.hpp

# List libraries of COIN projects
unitTest_LDADD =
unitTest_LDADD += ../../src/libBcp.la
unitTest_LDADD += $(CGLOBJDIR)/src/libCgl.la
unitTest_LDADD += $(OSIOBJDIR)/src/OsiClp/libOsiClp.la
unitTest_LDADD += $(OSIOBJDIR)/src/libOsi.la
unitTest_LDADD += $(CLPOBJDIR)/src/libClp.la
unitTest_LDADD += $(COINUTILSOBJDIR)/src/libCoinUtils.la

# List additional libraries
LIBS += $(ADDLIBS)
LIBS += `cat $(CGLOBJDIR)/cgl_addlibs.txt`
LIBS += `cat $(OSIOBJDIR)/osi_addlibs.txt`
LIBS += `cat $(CLPOBJDIR)/clp_addlibs.txt`
LIBS += `cat $(COINUTILSOBJDIR)/coinutils_addlibs.txt`

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS =
AM_CPPFLAGS += -I`$(CYGPATH_W) $(BCPSRCDIR)/src/include`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(CGLSRCDIR)/src`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(CGLSRCDIR)/src/CglFlowCover`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(CGLSRCDIR)/src/CglGomory`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(CGLSRCDIR)/src/CglKnapsackCover`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(CGLSRCDIR)/src/CglOddHole`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(CGLSRCDIR)/src/CglProbing`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(OSISRCDIR)/src`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(OSISRCDIR)/src/OsiClp`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(CLPSRCDIR)/src`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(CLPOBJDIR)/inc`
AM_CPPFLAGS += -I`$(CYGPATH_W) $(COINUTILSSRCDIR)/src`

# This line is necessary to allow VPATH compilation with MS compilers
# on Cygwin
DEFAULT_INCLUDES  = -I. -Iinclude -I$(top_builddir)/inc

test: unitTest$(EXEEXT)
	./unitTest$(EXEEXT) -param bb.par

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = flugpl.log
