# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id$

AUTOMAKE_OPTIONS = foreign

########################################################################
#                      unitTest for CoinUtils                          #
########################################################################

noinst_PROGRAMS = unitTest

nodist_unitTest_SOURCES = 
nodist_unitTest_SOURCES += LP/BB_lp.cpp
nodist_unitTest_SOURCES += TM/BB_tm.cpp
nodist_unitTest_SOURCES += Member/BB_user_data.cpp
nodist_unitTest_SOURCES += Member/BB_packer.cpp
nodist_unitTest_SOURCES += Member/BB_init.cpp
nodist_unitTest_SOURCES += Member/BB.cpp
nodist_unitTest_SOURCES += Member/BB_cut.cpp
nodist_unitTest_SOURCES += include/BB_user_data.hpp
nodist_unitTest_SOURCES += include/BB_packer.hpp
nodist_unitTest_SOURCES += include/BB_lp.hpp
nodist_unitTest_SOURCES += include/BB_init.hpp
nodist_unitTest_SOURCES += include/BB_tm.hpp
nodist_unitTest_SOURCES += include/BB.hpp
nodist_unitTest_SOURCES += include/BB_cut.hpp

# List libraries of COIN projects
unitTest_LDADD        = ../../src/libBcp.la $(BCPLIB_LIBS) $(BAC_LIBS)
unitTest_DEPENDENCIES = ../../src/libBcp.la $(BCPLIB_DEPENDENCIES) $(BAC_DEPENDENCIES)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = -I`$(CYGPATH_W) $(srcdir)/../../src/include` \
	$(BCPLIB_CFLAGS) \
	$(BAC_CFLAGS) 

# This line is necessary to allow VPATH compilation
DEFAULT_INCLUDES = -I. -Iinclude -I`$(CYGPATH_W) $(top_builddir)/src/include`

test: unitTest$(EXEEXT)
	./unitTest$(EXEEXT) -param bb.par

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program
